5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1582_1332.log
== TEST (2019-03-28 16:25:14) 
-- CODE:
aresta = 0.5
area = (3/2) * (sqrt(3)*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2) * (sqrt(3)*aresta**2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:02:46) 
-- CODE:
aresta = 0.5
area = (3/2) * (sqrt(3)*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.127308
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 2, in <module>
    area = (3/2) * (sqrt(3)*aresta**2)
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:02:51) 
-- CODE:
aresta = 0.5
area = (3/2) * (sqrt(3)*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2) * (sqrt(3)*aresta**2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:03:33) 
-- CODE:
aresta = 0.5
area = (3/2) * ((3**0.5)*aresta**2)
 
print(round(area, 4))
-- OUTPUT:
0.6495
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:03:38) 
-- CODE:
aresta = 0.5
area = (3/2) * ((3**0.5)*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.148101
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
0.6495
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:04:48) 
-- CODE:
aresta = 0.5
area = (3/2) * ((3**0.5) * (0.5**2))
 
print(round(area, 4))
-- EXECUTION TIME:
0.192589
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
0.6495
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:04:50) 
-- CODE:
aresta = 0.5
area = (3/2) * ((3**0.5) * (0.5**2))
 
print(round(area, 4))
-- EXECUTION TIME:
0.189299
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
0.6495
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:25:26) 
-- CODE:
aresta = 0.5
area = (3/2) * ((3**(1/2)) * (0.5**2))
 
print(round(area, 4))
-- OUTPUT:
0.6495
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:25:29) 
-- CODE:
aresta = 0.5
area = (3/2) * ((3**(1/2)) * (0.5**2))
 
print(round(area, 4))
-- EXECUTION TIME:
0.152342
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
0.6495
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:25:31) 
-- CODE:
aresta = 0.5
area = (3/2) * ((3**(1/2)) * (0.5**2))
 
print(round(area, 4))
-- EXECUTION TIME:
0.181149
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
0.6495
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:27:00) 
-- CODE:
aresta = 5
area = ((3/2) * ((3**(1/2)) * (5**2)))

print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:27:04) 
-- CODE:
aresta = 5
area = ((3/2) * ((3**(1/2)) * (5**2)))

print(round(area, 4))
-- EXECUTION TIME:
0.202782
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
